--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 	<script src="./assets/scripts.js"></script>
 	<title>Nina Carducci,photographe professionnel à Bordeaux</title>
 	<meta name="description" content=" La photographe professionnel Nina Carducci, située à Bordeaux, montre son approche du  metier, ses traveaux ainsi que ses tarifs."> 
+
+
+<!-- meta pour facebook -->
+<meta property="og:title" content="Nina Carducci,photographe à Bordeaux" />
+<meta property="og:type" content="article" />
+<meta property="og:description" content="Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses client" />
+<meta property="author" content="Nina Carducci" />
+<meta property="og:image" content="https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp" />
+
+
+
+
 </head>
 <body>
 <div class="top-header">
