--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <meta property="og:description" content="Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses client" />
 <meta property="author" content="Nina Carducci" />
 <meta property="og:image" content="https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp" />
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="600">
 
 
 
