--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="600">
 
+<!-- meta twitter-->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="Nina Carducci" />
+<meta name="twitter:creator" content="Nina Carducci" />
+<meta name="twitter:title" content="Nina Carducci,photographe à Bordeaux" />
+<meta name="twitter:description" content="Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses client" />
+<meta name="twitter:image" content="https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp" />
 
 
 
