--- a/index.html
+++ b/index.html
@@ -33,7 +33,37 @@
 <meta name="twitter:description" content="Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses client" />
 <meta name="twitter:image" content="https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp" />
 
+<!-- meta Pinterest-->
+<meta property="og:type" content="article" />
+  <meta property="og:title" content="Nina Carducci,photographe professionnelle bordelaise" />
+  <meta property="og:description" content="Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses client" />
+  <meta property="og:url" content="https://thomas67500.github.io/projet5/" />
+   <!--<meta property="og:site_name" content="Nina-Carducci.com" /> -->
+  <meta property="article:author" content="Nina Carducci" />
 
+
+  <!-- referencement avec schema.org-->
+  <script type="application/ld+json">
+	{ "@context" : "https://schema.org",
+	  "@type" : "Organization",
+		"currenciesAccepted": "EUR",
+		"url":"https://thomas67500.github.io/projet5/",
+		"founder : Nina Carducci",
+		"gender : female",
+		"familyName : Carducci",
+		"citation : "Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, 
+		il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. 
+		Aucune d’elles n’est la vérité.",
+		"jobTitle": {
+			"name": "Photographe",
+			
+		}
+		
+
+
+	
+	}
+	</script>
 
 </head>
 <body>
