--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
 	  "@type" : "Organization",
 		"currenciesAccepted": "EUR",
 		"url":"https://thomas67500.github.io/projet5/",
-		"founder : Nina Carducci",
-		"gender : female",
-		"familyName : Carducci",
-		"citation : "Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, 
+		"founder" : "Nina Carducci",
+		"gender" : "female",
+		"familyName" : "Carducci",
+		"citation" : "Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, 
 		il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. 
 		Aucune d’elles n’est la vérité.",
 		"jobTitle": {
-			"name": "Photographe",
-			
+			"name": "Photographe",	
 		}
 		
 
