changer la taille de certaines images

--- a/index.html
+++ b/index.html
@@ -140,14 +140,30 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallerywebp/concert/concert-crowd-photo.webp" alt="la vu"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallerywebp/concert/concert-crowd-photo-2448.webp"
+			srcset="./assets/images/gallerywebp/concert/concert-crowd-photo-2448.webp 2448w,
+			./assets/images/gallerywebp/concert/concert-crowd-photo-1090.webp 1090w,
+			./assets/images/gallerywebp/concert/concert-crowd-photo-848.webp 848w,
+			./assets/images/gallerywebp/concert/concert-crowd-photo-728.webp 728w,
+			./assets/images/gallerywebp/concert/concert-crowd-photo-608.webp 608w,
+			./assets/images/gallerywebp/concert/concert-crowd-photo-448.webp 448w,
+			./assets/images/gallerywebp/concert/concert-crowd-photo-224.webp 224w"
+			sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
+			alt=""/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/professional-suit-photo.webp" alt=""/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/team-photo.webp" alt=""/>
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/hands-ring-photo.webp" alt=""/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/man-model.webp" alt=""/>
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/mariage-couple-walk-photo.webp" alt=""/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/woman-model.webp" alt=""/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallerywebp/concert/singer-photo.webp" alt=""/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallerywebp/concert/singer-photo.webp" 
+			srcset="./assets/images/gallerywebp/concert/singer-photo.webp 5233w,
+			./assets/images/gallerywebp/concert/singer-photo-1090.webp 1090w,
+			./assets/images/gallerywebp/concert/singer-photo-848.webp 848w,
+			./assets/images/gallerywebp/concert/singer-photo-608.webp 608w,
+			./assets/images/gallerywebp/concert/singer-photo-254.webp 254w,"
+			sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
+			alt=""/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/work-desk-computer-photo.webp" alt=""/>
 		</div>
 	</div>
