--- a/index.html
+++ b/index.html
@@ -148,23 +148,54 @@
 			./assets/images/gallerywebp/concert/concert-crowd-photo-608.webp 608w,
 			./assets/images/gallerywebp/concert/concert-crowd-photo-448.webp 448w,
 			./assets/images/gallerywebp/concert/concert-crowd-photo-224.webp 224w"
-			sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 			alt=""/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/professional-suit-photo.webp" alt=""/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/team-photo.webp" alt=""/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/hands-ring-photo.webp" alt=""/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/hands-ring-photo-4453.webp" 
+			srcset="./assets/images/gallerywebp/mariage/hands-ring-photo-4453.webp 4453w,
+			./assets/images/gallerywebp/mariage/hands-ring-photo-1090.webp 1090w,
+			./assets/images/gallerywebp/mariage/hands-ring-photo-848.webp 848w,
+			./assets/images/gallerywebp/mariage/hands-ring-photo-608.webp 608w,
+			./assets/images/gallerywebp/mariage/hands-ring-photo-304.webp 304w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			alt=""/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/man-model.webp" alt=""/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/mariage-couple-walk-photo.webp" alt=""/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/woman-model.webp" alt=""/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-4480.webp"
+			srcset="./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-4480.webp 4480w,
+			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-1090.webp 1090w,
+			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-848.webp 848w,
+			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-728.webp 728w,
+			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-608.webp 608w,
+			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-448.webp 448w,
+			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-254.webp 254w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			alt=""/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/woman-model-4024.webp" 
+			srcset="./assets/images/gallerywebp/portraits/woman-model-4024.webp 4024w,
+			./assets/images/gallerywebp/portraits/woman-model-1090.webp 1090w,
+			./assets/images/gallerywebp/portraits/woman-model-848.webp 848w,
+			./assets/images/gallerywebp/portraits/woman-model-728.webp 728w,
+			./assets/images/gallerywebp/portraits/woman-model-608.webp 608w,
+			./assets/images/gallerywebp/portraits/woman-model-448.webp 448w,
+			./assets/images/gallerywebp/portraits/woman-model-254.webp 254w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			alt=""/>
 			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallerywebp/concert/singer-photo.webp" 
 			srcset="./assets/images/gallerywebp/concert/singer-photo.webp 5233w,
 			./assets/images/gallerywebp/concert/singer-photo-1090.webp 1090w,
 			./assets/images/gallerywebp/concert/singer-photo-848.webp 848w,
 			./assets/images/gallerywebp/concert/singer-photo-608.webp 608w,
 			./assets/images/gallerywebp/concert/singer-photo-254.webp 254w,"
-			sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 			alt=""/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/work-desk-computer-photo.webp" alt=""/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/work-desk-computer-photo-6000.webp" 
+			srcset="./assets/images/gallerywebp/entreprise/work-desk-computer-photo-6000.webp 6000w,
+			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-1090.webp 1090w,
+			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-848.webp 848w,
+			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-608.webp 608w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			alt=""/>
 		</div>
 	</div>
 	<div class="quote">
