--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallerywebp/concert/concert-crowd-photo-2448.webp"
+			<img data-gallery-tag="Concert" class="gallery-item" 
+			src="./assets/images/gallerywebp/concert/concert-crowd-photo-2448.webp"
 			srcset="./assets/images/gallerywebp/concert/concert-crowd-photo-2448.webp 2448w,
 			./assets/images/gallerywebp/concert/concert-crowd-photo-1090.webp 1090w,
 			./assets/images/gallerywebp/concert/concert-crowd-photo-848.webp 848w,
