--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 			./assets/images/gallerywebp/concert/concert-crowd-photo-728.webp 728w,
 			./assets/images/gallerywebp/concert/concert-crowd-photo-608.webp 608w,
 			./assets/images/gallerywebp/concert/concert-crowd-photo-448.webp 448w,
-			./assets/images/gallerywebp/concert/concert-crowd-photo-224.webp 224w,"
+			./assets/images/gallerywebp/concert/concert-crowd-photo-224.webp 224w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 			alt=""/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/professional-suit-photo.webp" alt=""/>
@@ -158,7 +158,7 @@
 			./assets/images/gallerywebp/mariage/hands-ring-photo-1090.webp 1090w,
 			./assets/images/gallerywebp/mariage/hands-ring-photo-848.webp 848w,
 			./assets/images/gallerywebp/mariage/hands-ring-photo-608.webp 608w,
-			./assets/images/gallerywebp/mariage/hands-ring-photo-304.webp 304w,"
+			./assets/images/gallerywebp/mariage/hands-ring-photo-304.webp 304w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 			alt=""/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/man-model.webp" alt=""/>
@@ -169,7 +169,7 @@
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-728.webp 728w,
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-608.webp 608w,
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-448.webp 448w,
-			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-254.webp 254w,"
+			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 			alt=""/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/woman-model-4024.webp" 
@@ -179,7 +179,7 @@
 			./assets/images/gallerywebp/portraits/woman-model-728.webp 728w,
 			./assets/images/gallerywebp/portraits/woman-model-608.webp 608w,
 			./assets/images/gallerywebp/portraits/woman-model-448.webp 448w,
-			./assets/images/gallerywebp/portraits/woman-model-254.webp 254w,"
+			./assets/images/gallerywebp/portraits/woman-model-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 			alt=""/>
 			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallerywebp/concert/singer-photo.webp" 
@@ -187,14 +187,14 @@
 			./assets/images/gallerywebp/concert/singer-photo-1090.webp 1090w,
 			./assets/images/gallerywebp/concert/singer-photo-848.webp 848w,
 			./assets/images/gallerywebp/concert/singer-photo-608.webp 608w,
-			./assets/images/gallerywebp/concert/singer-photo-254.webp 254w,"
+			./assets/images/gallerywebp/concert/singer-photo-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 			alt=""/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/work-desk-computer-photo-6000.webp" 
 			srcset="./assets/images/gallerywebp/entreprise/work-desk-computer-photo-6000.webp 6000w,
 			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-1090.webp 1090w,
 			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-848.webp 848w,
-			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-608.webp 608w,"
+			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-608.webp 608w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 			alt=""/>
 		</div>
