--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!-- meta Pinterest-->
 <meta property="og:type" content="article" />
   <meta property="og:title" content="Nina Carducci,photographe professionnelle bordelaise" />
-  <meta property="og:description" content="Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses client" />
+  <meta property="og:description" content="Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses clients" />
   <meta property="og:url" content="https://thomas67500.github.io/projet5/" />
    <!--<meta property="og:site_name" content="Nina-Carducci.com" /> -->
   <meta property="article:author" content="Nina Carducci" />
@@ -151,8 +151,25 @@
 			./assets/images/gallerywebp/concert/concert-crowd-photo-224.webp 224w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 			alt=""/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/professional-suit-photo.webp" alt=""/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/team-photo.webp" alt=""/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/professional-suit-photo-4000.webp" 
+			srcset="./assets/images/gallerywebp/entreprise/professional-suit-photo-4000.webp 400w,
+			./assets/images/gallerywebp/entreprise/professional-suit-photo-1090.webp 1090w,
+			./assets/images/gallerywebp/entreprise/professional-suit-photo-848.webp 848w,
+			./assets/images/gallerywebp/entreprise/professional-suit-photo-728.webp 728w,
+			./assets/images/gallerywebp/entreprise/professional-suit-photo-608.webp 608w,
+			./assets/images/gallerywebp/entreprise/professional-suit-photo-448.webp 448w,
+			./assets/images/gallerywebp/entreprise/professional-suit-photo-254.webp 254w,"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			alt=""/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/team-photo-4084.webp" 
+			srcset="./assets/images/gallerywebp/entreprise/team-photo-4084.webp 4084w,
+			./assets/images/gallerywebp/entreprise/team-photo-1090.webp 1090w,
+			./assets/images/gallerywebp/entreprise/team-photo-848.webp 848w,
+			./assets/images/gallerywebp/entreprise/team-photo-608.webp 608w,
+			./assets/images/gallerywebp/entreprise/team-photo-254.webp 254w,"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			alt=""/>
+			
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/hands-ring-photo-4453.webp" 
 			srcset="./assets/images/gallerywebp/mariage/hands-ring-photo-4453.webp 4453w,
 			./assets/images/gallerywebp/mariage/hands-ring-photo-1090.webp 1090w,
@@ -161,7 +178,16 @@
 			./assets/images/gallerywebp/mariage/hands-ring-photo-304.webp 304w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 			alt=""/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/man-model.webp" alt=""/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/man-model-2211.webp" 
+			srcset="./assets/images/gallerywebp/portraits/man-model-2211.webp 2211w,
+			./assets/images/gallerywebp/portraits/man-model-1090.webp 1090w,
+			./assets/images/gallerywebp/portraits/man-model-848.webp 848w,
+			./assets/images/gallerywebp/portraits/man-model-728.webp 728w,
+			./assets/images/gallerywebp/portraits/man-model-608.webp 608w,
+			./assets/images/gallerywebp/portraits/man-model-448.webp 448w,
+			./assets/images/gallerywebp/portraits/man-model-254.webp 254w,"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			alt=""/>
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-4480.webp"
 			srcset="./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-4480.webp 4480w,
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-1090.webp 1090w,
