mise en place sémantique schéma

--- a/index.html
+++ b/index.html
@@ -43,24 +43,21 @@
 
 
   <!-- referencement avec schema.org-->
-  <script type="application/ld+json">
-	{ "@context" : "https://schema.org",
-	  "@type" : "Organization",
-		"currenciesAccepted": "EUR",
-		"url":"https://thomas67500.github.io/projet5/",
-		"founder" : "Nina Carducci",
-		"gender" : "female",
-		"familyName" : "Carducci",
-		"citation" : "Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, 
-		il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. 
-		Aucune d’elles n’est la vérité.",
-		"jobTitle": {
-			"name": "Photographe",	
-		}
-		
-
-
-	
+  <script type='application/ld+json'>
+	{
+	  "@context": "http://www.schema.org",
+	  "@type": "ProfessionalService",
+	  "name": "Nina Carducci",
+	  "url": "https://thomas67500.github.io/projet5/",
+	  "logo": "https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp",
+	  "priceRange": "$$$$",
+	  "description": "Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses clients",
+	  "address": {
+		 "@type": "PostalAddress",
+		 "addressLocality": "Bordeaux",
+		 "addressRegion": "Nouvelle-Aquitaine",
+		 "addressCountry": "France"
+	  }
 	}
 	</script>
 
