correction et mise en place du référencement local

--- a/index.html
+++ b/index.html
@@ -51,13 +51,18 @@
 	  "url": "https://thomas67500.github.io/projet5/",
 	  "logo": "https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp",
 	  "priceRange": "$$$$",
+	  "image": "https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp",
 	  "description": "Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses clients",
 	  "address": {
 		 "@type": "PostalAddress",
+		 "streetAddress": "68 avenue Alsace-Lorraine",
 		 "addressLocality": "Bordeaux",
 		 "addressRegion": "Nouvelle-Aquitaine",
+		 "postalCode": "33200",
 		 "addressCountry": "France"
-	  }
+	  },
+	   "openingHours": "Mo 10:00-19:00 Tu 10:00-19:00 We 10:00-19:00 Th 10:00-19:00 Fr 10:00-19:00",
+	  "telephone": "05 56 67 78 89"
 	}
 	</script>
 
