--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		</ul>
 	</div>
 </div>
-<div id="header">
+<header>
 
 	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
@@ -118,7 +118,7 @@
 			<span class="carousel-control-next-icon" aria-hidden="true"></span>
 			<span class="visually-hidden">Next</span>
 		</button>
-	</div>
+	</header>
 </div>
 <div id="about">
 	<div class="picture left">
