--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
 <div class="top-header">
-	<h3 class="name">Nina Carducci</h3>
+	<h1 class="name">Nina Carducci</h1>
 	<div class="nav">   
 		<ul>
 			<li><a href="#about">À propos</a></li>
@@ -104,7 +104,7 @@
 				srcset="./assets/images/sliderwebp/crowd-festival-1920.webp 1920w, 
 				./assets/images/sliderwebp/crowd-festival-2048.webp 2048w "
 				sizes="100vw" 
-				class="d-block w-100" alt="Une foule faisant des signes d'encouragement lors d'un évenement">
+				class="d-block w-100" alt="Une foule qui profite d'un évenement">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/sliderwebp/wedding-kiss-family-1920.webp" class="d-block w-100" alt="Un couple qui s'enlace lors d'un mariage">
@@ -133,7 +133,7 @@
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
-		<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
+		<h4 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h4>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</div>
@@ -152,7 +152,7 @@
 			./assets/images/gallerywebp/concert/concert-crowd-photo-448.webp 448w,
 			./assets/images/gallerywebp/concert/concert-crowd-photo-224.webp 224w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt=""/>
+			alt="Vue d'un concert du point de vue d'une fosse"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/professional-suit-photo-4000.webp" 
 			srcset="./assets/images/gallerywebp/entreprise/professional-suit-photo-4000.webp 400w,
 			./assets/images/gallerywebp/entreprise/professional-suit-photo-1090.webp 1090w,
@@ -162,7 +162,7 @@
 			./assets/images/gallerywebp/entreprise/professional-suit-photo-448.webp 448w,
 			./assets/images/gallerywebp/entreprise/professional-suit-photo-254.webp 254w,"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt=""/>
+			alt=" Un homme en costume, croisant les bras"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/team-photo-4084.webp" 
 			srcset="./assets/images/gallerywebp/entreprise/team-photo-4084.webp 4084w,
 			./assets/images/gallerywebp/entreprise/team-photo-1090.webp 1090w,
@@ -170,7 +170,7 @@
 			./assets/images/gallerywebp/entreprise/team-photo-608.webp 608w,
 			./assets/images/gallerywebp/entreprise/team-photo-254.webp 254w,"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt=""/>
+			alt="deux femmes dans un milieu profesionnel, l'une d'entre elle sourit"/>
 			
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/hands-ring-photo-4453.webp" 
 			srcset="./assets/images/gallerywebp/mariage/hands-ring-photo-4453.webp 4453w,
@@ -179,7 +179,7 @@
 			./assets/images/gallerywebp/mariage/hands-ring-photo-608.webp 608w,
 			./assets/images/gallerywebp/mariage/hands-ring-photo-304.webp 304w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt=""/>
+			alt="les mains d'un couple qui se touchent"/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/man-model-2211.webp" 
 			srcset="./assets/images/gallerywebp/portraits/man-model-2211.webp 2211w,
 			./assets/images/gallerywebp/portraits/man-model-1090.webp 1090w,
@@ -189,7 +189,7 @@
 			./assets/images/gallerywebp/portraits/man-model-448.webp 448w,
 			./assets/images/gallerywebp/portraits/man-model-254.webp 254w,"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt=""/>
+			alt=" Un homme qui ferme les yeux"/>
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-4480.webp"
 			srcset="./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-4480.webp 4480w,
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-1090.webp 1090w,
@@ -199,7 +199,7 @@
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-448.webp 448w,
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt=""/>
+			alt=" un couple en mouvement,se tenant la main sous un palmier"/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/woman-model-4024.webp" 
 			srcset="./assets/images/gallerywebp/portraits/woman-model-4024.webp 4024w,
 			./assets/images/gallerywebp/portraits/woman-model-1090.webp 1090w,
@@ -209,7 +209,7 @@
 			./assets/images/gallerywebp/portraits/woman-model-448.webp 448w,
 			./assets/images/gallerywebp/portraits/woman-model-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt=""/>
+			alt="une femme qui se touche les cheveux, derrière un grillage"/>
 			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallerywebp/concert/singer-photo.webp" 
 			srcset="./assets/images/gallerywebp/concert/singer-photo.webp 5233w,
 			./assets/images/gallerywebp/concert/singer-photo-1090.webp 1090w,
@@ -217,27 +217,27 @@
 			./assets/images/gallerywebp/concert/singer-photo-608.webp 608w,
 			./assets/images/gallerywebp/concert/singer-photo-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt=""/>
+			alt="un chanteur lors d'un concert"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/work-desk-computer-photo-6000.webp" 
 			srcset="./assets/images/gallerywebp/entreprise/work-desk-computer-photo-6000.webp 6000w,
 			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-1090.webp 1090w,
 			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-848.webp 848w,
 			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-608.webp 608w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt=""/>
+			alt="une femme qui sourit, dans un bureau profesionnel"/>
 		</div>
 	</div>
 	<div class="quote">
 		<figure>
 			<blockquote>
-				<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
+				<h2 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h2>
 			</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
 	</div>
 </div>
 <div id="services">
-	<h3 class="title">Mes services</h3>
+	<h2 class="title">Mes services</h2>
 	<div class="container">
 		<div class="service">
 			<div class="service__description">
@@ -276,7 +276,7 @@
 <div class="quote">
 	<figure>
 		<blockquote>
-			<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+			<h2 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h2>
 		</blockquote>
 		<figcaption class="quote__author">- Richard Avedon</figcaption>
 	</figure>
@@ -284,7 +284,7 @@
 <div id="contact">
 	<div class="container">
 		<div class="form-container">
-			<h3>Une question ? Une demande de devis ?</h3>
+			<h2>Une question ? Une demande de devis ?</h2>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 			<form action="" method="post">
 				<label for="nom">Nom</label>
