correction alt et méta donnée

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
 	<title>Nina Carducci,photographe professionnel à Bordeaux</title>
-	<meta name="description" content=" La photographe professionnel Nina Carducci, située à Bordeaux, montre son approche du  metier, ses traveaux ainsi que ses tarifs."> 
+	<meta name="description" content=" Nina Carducci est une entreprise de photographie à Bordeaux,vous pouvez y faire les devis de vos photos ou encore d'albums photographiques."> 
 
 
 <!-- meta pour facebook -->
 <meta property="og:title" content="Nina Carducci,photographe à Bordeaux" />
 <meta property="og:type" content="article" />
-<meta property="og:description" content="Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses client" />
+<meta property="og:description" content="Nina Carducci est une entreprise de photographie à Bordeaux,vous pouvez y faire les devis de vos photos ou encore d'albums photographiques." />
 <meta property="author" content="Nina Carducci" />
 <meta property="og:image" content="https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp" />
 <meta property="og:image:width" content="1200">
@@ -30,13 +30,13 @@
 <meta name="twitter:site" content="Nina Carducci" />
 <meta name="twitter:creator" content="Nina Carducci" />
 <meta name="twitter:title" content="Nina Carducci,photographe à Bordeaux" />
-<meta name="twitter:description" content="Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses client" />
+<meta name="twitter:description" content="Nina Carducci est une entreprise de photographie à Bordeaux,vous pouvez y faire les devis de vos photos ou encore d'albums photographiques." />
 <meta name="twitter:image" content="https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp" />
 
 <!-- meta Pinterest-->
 <meta property="og:type" content="article" />
   <meta property="og:title" content="Nina Carducci,photographe professionnelle bordelaise" />
-  <meta property="og:description" content="Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses clients" />
+  <meta property="og:description" content="Nina Carducci est une entreprise de photographie à Bordeaux,vous pouvez y faire les devis de vos photos ou encore d'albums photographiques." />
   <meta property="og:url" content="https://thomas67500.github.io/projet5/" />
    <!--<meta property="og:site_name" content="Nina-Carducci.com" /> -->
   <meta property="article:author" content="Nina Carducci" />
@@ -52,7 +52,7 @@
 	  "logo": "https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp",
 	  "priceRange": "$$$$",
 	  "image": "https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp",
-	  "description": "Nina Carducci est une photographe bordelaise passionnée qui veut pouvoir immortaliser les futurs souvenirs de ses clients",
+	  "description": "Nina Carducci est une entreprise de photographie à Bordeaux,vous pouvez y faire les devis de vos photos ou encore d'albums photographiques.",
 	  "address": {
 		 "@type": "PostalAddress",
 		 "streetAddress": "68 avenue Alsace-Lorraine",
@@ -76,7 +76,7 @@
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/webp/instagram.webp" aria-label="ma page instagram"></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/webp/instagram.webp"  alt="logo d'instagram" aria-label="ma page instagram"></a></li>
 		</ul>
 	</div>
 </div>
@@ -97,17 +97,17 @@
 				./assets/images/sliderwebp/buiseness-crosswalk-1140.webp 1140w, 
 				./assets/images/sliderwebp/buiseness-crosswalk-300.webp 300w"
 				sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
-				class="d-block w-100"  alt="Un homme en costume traversant un passage clouté">
+				class="d-block w-100"  alt="Grâce aux différentes méthodes de compositions,sublimez vos photos !"> 
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/sliderwebp/crowd-festival-1920.webp"
 				srcset="./assets/images/sliderwebp/crowd-festival-1920.webp 1920w, 
 				./assets/images/sliderwebp/crowd-festival-2048.webp 2048w "
 				sizes="100vw" 
-				class="d-block w-100" alt="Une foule qui profite d'un évenement">
+				class="d-block w-100" alt="Sortez toujours du lot,même au milieu d'une foule"> 
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/sliderwebp/wedding-kiss-family-1920.webp" class="d-block w-100" alt="Un couple qui s'enlace lors d'un mariage">
+				<img src="./assets/images/sliderwebp/wedding-kiss-family-1920.webp" class="d-block w-100" alt="Immortalisez vos plus grands souvenirs.">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -118,8 +118,9 @@
 			<span class="carousel-control-next-icon" aria-hidden="true"></span>
 			<span class="visually-hidden">Next</span>
 		</button>
+	</div>
 	</header>
-</div>
+
 <div id="about">
 	<div class="picture left">
 		<img src="./assets/images/webp/nina-1460.webp" 
@@ -129,7 +130,7 @@
 		./assets/images/webp/nina-560.webp 560w,
 		./assets/images/webp/nina-256.webp 256w"
 		sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
-		alt="une photo de Nina Carducci,la photographe">
+		alt="Nina Carducci, votre photographe qui va tout faire pour surpasser vos attentes!">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -152,7 +153,7 @@
 			./assets/images/gallerywebp/concert/concert-crowd-photo-448.webp 448w,
 			./assets/images/gallerywebp/concert/concert-crowd-photo-224.webp 224w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="Vue d'un concert du point de vue d'une fosse"/>
+			alt="Revivez certains évenements comme si vous y étiez de nouveau."/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/professional-suit-photo-4000.webp" 
 			srcset="./assets/images/gallerywebp/entreprise/professional-suit-photo-4000.webp 400w,
 			./assets/images/gallerywebp/entreprise/professional-suit-photo-1090.webp 1090w,
@@ -160,17 +161,17 @@
 			./assets/images/gallerywebp/entreprise/professional-suit-photo-728.webp 728w,
 			./assets/images/gallerywebp/entreprise/professional-suit-photo-608.webp 608w,
 			./assets/images/gallerywebp/entreprise/professional-suit-photo-448.webp 448w,
-			./assets/images/gallerywebp/entreprise/professional-suit-photo-254.webp 254w,"
+			./assets/images/gallerywebp/entreprise/professional-suit-photo-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt=" Un homme en costume, croisant les bras"/>
+			alt="Soyez toujours prêt pour vos entretiens !"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/team-photo-4084.webp" 
 			srcset="./assets/images/gallerywebp/entreprise/team-photo-4084.webp 4084w,
 			./assets/images/gallerywebp/entreprise/team-photo-1090.webp 1090w,
 			./assets/images/gallerywebp/entreprise/team-photo-848.webp 848w,
 			./assets/images/gallerywebp/entreprise/team-photo-608.webp 608w,
-			./assets/images/gallerywebp/entreprise/team-photo-254.webp 254w,"
+			./assets/images/gallerywebp/entreprise/team-photo-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="deux femmes dans un milieu profesionnel, l'une d'entre elle sourit"/>
+			alt="Sublimez votre esprit d'équipe !"/>
 			
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/hands-ring-photo-4453.webp" 
 			srcset="./assets/images/gallerywebp/mariage/hands-ring-photo-4453.webp 4453w,
@@ -179,7 +180,7 @@
 			./assets/images/gallerywebp/mariage/hands-ring-photo-608.webp 608w,
 			./assets/images/gallerywebp/mariage/hands-ring-photo-304.webp 304w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="les mains d'un couple qui se touchent"/>
+			alt="Pour mettre en valeur le symbole de votre union"/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/man-model-2211.webp" 
 			srcset="./assets/images/gallerywebp/portraits/man-model-2211.webp 2211w,
 			./assets/images/gallerywebp/portraits/man-model-1090.webp 1090w,
@@ -187,9 +188,9 @@
 			./assets/images/gallerywebp/portraits/man-model-728.webp 728w,
 			./assets/images/gallerywebp/portraits/man-model-608.webp 608w,
 			./assets/images/gallerywebp/portraits/man-model-448.webp 448w,
-			./assets/images/gallerywebp/portraits/man-model-254.webp 254w,"
+			./assets/images/gallerywebp/portraits/man-model-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt=" Un homme qui ferme les yeux"/>
+			alt="Pour prendre la photo au moment le plus opportun "/>
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-4480.webp"
 			srcset="./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-4480.webp 4480w,
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-1090.webp 1090w,
@@ -199,7 +200,7 @@
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-448.webp 448w,
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt=" un couple en mouvement,se tenant la main sous un palmier"/>
+			alt="Pour immortaliser votre union."/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/woman-model-4024.webp" 
 			srcset="./assets/images/gallerywebp/portraits/woman-model-4024.webp 4024w,
 			./assets/images/gallerywebp/portraits/woman-model-1090.webp 1090w,
@@ -209,7 +210,7 @@
 			./assets/images/gallerywebp/portraits/woman-model-448.webp 448w,
 			./assets/images/gallerywebp/portraits/woman-model-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="une femme qui se touche les cheveux, derrière un grillage"/>
+			alt="Toujours être innovant pour vous mettre en valeur !"/>
 			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallerywebp/concert/singer-photo.webp" 
 			srcset="./assets/images/gallerywebp/concert/singer-photo.webp 5233w,
 			./assets/images/gallerywebp/concert/singer-photo-1090.webp 1090w,
@@ -217,14 +218,14 @@
 			./assets/images/gallerywebp/concert/singer-photo-608.webp 608w,
 			./assets/images/gallerywebp/concert/singer-photo-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="un chanteur lors d'un concert"/>
+			alt="Pour immortaliser des moments marquants d'un concert !"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/work-desk-computer-photo-6000.webp" 
 			srcset="./assets/images/gallerywebp/entreprise/work-desk-computer-photo-6000.webp 6000w,
 			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-1090.webp 1090w,
 			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-848.webp 848w,
 			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-608.webp 608w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="une femme qui sourit, dans un bureau profesionnel"/>
+			alt="Sublimez votre quotidien."/>
 		</div>
 	</div>
 	<div class="quote">
@@ -246,7 +247,6 @@
 			</div>
 			<div class="service__price">
 				<h4>350€/demi journée</h4>
-				<meta itemprop="priceRange" content="350€"/>
 				<span>Matériel, déplacement inclus</span>
 			</div>
 
@@ -286,7 +286,7 @@
 		<div class="form-container">
 			<h2>Une question ? Une demande de devis ?</h2>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-			<form action="" method="post">
+			<form action="#" method="post">
 				<label for="nom">Nom</label>
 				<input type="text" name="nom" id="nom">
 				<label for="email">Email</label>
